--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-*{
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+
 /* Centered the app */
-body{
+body {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,18 +26,19 @@ text-shadow
 stroke-color, fill-color and stroke-width */
 
 /* men esma yaane bas ta3mul select 3a text */
-::selection{
+::selection {
   color: #fff;
   background: #43AFFC;
 }
 
-.wrapper{
+.wrapper {
   width: 400px;
   background: #fff;
   border-radius: 7px;
   box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
-.wrapper header{
+
+.wrapper header {
   display: flex;
   font-size: 21px;
   font-weight: 500;
@@ -44,22 +47,31 @@ stroke-color, fill-color and stroke-width */
   align-items: center;
   border-bottom: 1px solid #ccc;
 }
-header i{
+
+header i {
   font-size: 0em;
   cursor: pointer;
   margin-right: 8px;
 }
-.wrapper.active header i{
+
+.wrapper.active header i {
   margin-left: 5px;
   font-size: 30px;
 }
-.wrapper .input-part{
+
+.wrapper .input-part {
   margin: 20px 25px 30px;
 }
-.wrapper.active .input-part{
+
+
+/* ================================================================ */
+/* hoy bte5fi el input part */
+.wrapper.active .input-part {
   display: none;
 }
-.input-part .info-txt{
+
+
+.input-part .info-txt {
   display: none;
   font-size: 17px;
   text-align: center;
@@ -67,19 +79,22 @@ header i{
   border-radius: 7px;
   margin-bottom: 15px;
 }
-.input-part .info-txt.error{
+
+.input-part .info-txt.error {
   color: #721c24;
   display: block;
   background: #f8d7da;
   border: 1px solid #f5c6cb;
 }
-.input-part .info-txt.pending{
+
+.input-part .info-txt.pending {
   color: #0c5460;
   display: block;
   background: #d1ecf1;
   border: 1px solid #bee5eb;
 }
-.input-part :where(input, button){
+
+.input-part :where(input, button) {
   width: 100%;
   height: 55px;
   border: none;
@@ -87,7 +102,8 @@ header i{
   font-size: 18px;
   border-radius: 7px;
 }
-.input-part input{
+
+.input-part input {
   text-align: center;
   padding: 0 15px;
   border: 1px solid #ccc;
@@ -99,14 +115,16 @@ header i{
 
 /* i5tisar */
 /* :is(ul,ol) li {} */
-.input-part input:is(:focus, :valid){
+.input-part input:is(:focus, :valid) {
   border: 2px solid #43AFFC;
 }
-.input-part input::placeholder{
+
+.input-part input::placeholder {
   color: #bfbfbf;
 }
+
 /* important */
-.input-part .separator{
+.input-part .separator {
   height: 1px;
   width: 100%;
   margin: 25px 0;
@@ -116,21 +134,24 @@ header i{
   align-items: center;
   justify-content: center;
 }
-.separator::before{
+
+.separator::before {
   content: "or";
   color: #b3b3b3;
   font-size: 19px;
   padding: 0 15px;
   background: #fff;
 }
+
 /* /fakhame */
-.input-part button{
+.input-part button {
   color: #fff;
   cursor: pointer;
   background: #43AFFC;
   transition: 0.3s ease;
 }
-.input-part button:hover{
+
+.input-part button:hover {
   background: #1d9ffc;
 }
 
@@ -140,40 +161,48 @@ header i{
 
 /* second part */
 /* hayda li iza sar block bi bayen kelshi */
-.wrapper .weather-part{
+/* hayda el 2osem el tene */
+.wrapper .weather-part {
   display: none;
   margin: 30px 0 0;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 /* importante */
-.wrapper.active .weather-part{
+.wrapper.active .weather-part {
   display: flex;
 }
-.weather-part img{
+
+.weather-part img {
   max-width: 125px;
 }
- /* 19°C */
-.weather-part .temp{
+
+/* 19°C */
+.weather-part .temp {
   display: flex;
   font-weight: 500;
   font-size: 72px;
 }
-.weather-part .temp .numb{
+
+.weather-part .temp .numb {
   font-weight: 600;
 }
-.weather-part .temp .deg{
+
+.weather-part .temp .deg {
   font-size: 40px;
   display: block;
   margin: 10px 5px 0 0;
 }
-.weather-part .weather{
+
+.weather-part .weather {
   font-size: 21px;
   text-align: center;
   margin: -5px 20px 15px;
 }
-.weather-part .location{
+
+.weather-part .location {
   display: flex;
   font-size: 19px;
   padding: 0 20px;
@@ -181,50 +210,60 @@ header i{
   margin-bottom: 30px;
   align-items: flex-start;
 }
-.location i{
+
+.location i {
   font-size: 22px;
   margin: 4px 5px 0 0;
 }
 
 
 /* last section */
-.weather-part .bottom-details{
+.weather-part .bottom-details {
   display: flex;
   width: 100%;
   justify-content: space-between;
   border-top: 1px solid #ccc;
 }
-.bottom-details .column{
+
+.bottom-details .column {
   display: flex;
   width: 100%;
   padding: 15px 0;
   align-items: center;
   justify-content: center;
 }
-.column i{
+
+.column i {
   color: #5DBBFF;
   font-size: 40px;
 }
-.column.humidity{
+
+.column.humidity {
   border-left: 1px solid #ccc;
 }
-.column .details{
+
+.column .details {
   margin-left: 3px;
 }
-.details .temp, .humidity span{
+
+.details .temp,
+.humidity span {
   font-size: 18px;
   font-weight: 500;
   margin-top: -3px;
 }
-.details .temp .deg{
+
+.details .temp .deg {
   margin: 0;
   font-size: 17px;
   padding: 0 2px 0 1px;
 }
-.column .details p{
+
+.column .details p {
   font-size: 14px;
   margin-top: -6px;
 }
-.humidity i{
+
+.humidity i {
   font-size: 37px;
 }
